--- a/xwiki-platform-core/xwiki-platform-junco/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-junco/pom.xml
@@ -26,37 +26,15 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.xwiki.platform</groupId>
-    <artifactId>xwiki-platform-junco</artifactId>
+    <artifactId>xwiki-platform-core</artifactId>
     <version>5.2-SNAPSHOT</version>
   </parent>
-  <artifactId>xwiki-platform-junco-base</artifactId>
-  <name>XWiki Platform - Junco - Base</name>
+  <artifactId>xwiki-platform-junco</artifactId>
+  <name>XWiki Platform - Junco - Parent POM</name>
   <packaging>pom</packaging>
-  <description>Junco Skin Base</description>
-  <properties>
-    <!-- Don't run CLIRR here since there's no Java code. -->
-    <xwiki.clirr.skip>true</xwiki.clirr.skip>
-  </properties>
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-assembly-plugin</artifactId>
-        <configuration>
-          <appendAssemblyId>false</appendAssemblyId>
-          <descriptors>
-            <descriptor>${basedir}/src/assemble/skin.xml</descriptor>
-          </descriptors>
-        </configuration>
-        <executions>
-          <execution>
-            <phase>package</phase>
-            <goals>
-              <goal>single</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-    </plugins>
-  </build>
+  <description>Parent POM for Junco modules</description>
+  <modules>
+    <module>xwiki-platform-junco-base</module>
+    <module>xwiki-platform-junco-themes</module>
+  </modules>
 </project>
