--- a/xwiki-platform-core/xwiki-platform-junco/xwiki-platform-junco-themes/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-junco/xwiki-platform-junco-themes/pom.xml
@@ -29,34 +29,11 @@
     <artifactId>xwiki-platform-junco</artifactId>
     <version>5.2-SNAPSHOT</version>
   </parent>
-  <artifactId>xwiki-platform-junco-base</artifactId>
-  <name>XWiki Platform - Junco - Base</name>
+  <artifactId>xwiki-platform-junco-themes</artifactId>
+  <name>XWiki Platform - Junco - Themes</name>
   <packaging>pom</packaging>
-  <description>Junco Skin Base</description>
-  <properties>
-    <!-- Don't run CLIRR here since there's no Java code. -->
-    <xwiki.clirr.skip>true</xwiki.clirr.skip>
-  </properties>
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-assembly-plugin</artifactId>
-        <configuration>
-          <appendAssemblyId>false</appendAssemblyId>
-          <descriptors>
-            <descriptor>${basedir}/src/assemble/skin.xml</descriptor>
-          </descriptors>
-        </configuration>
-        <executions>
-          <execution>
-            <phase>package</phase>
-            <goals>
-              <goal>single</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-    </plugins>
-  </build>
+  <description>Parent POM for Junco Themes modules</description>
+  <modules>
+    <module>xwiki-platform-junco-theme-colibri</module>
+  </modules>
 </project>
