--- a/xwiki-platform-core/xwiki-platform-junco/xwiki-platform-junco-themes/xwiki-platform-junco-theme-colibri/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-junco/xwiki-platform-junco-themes/xwiki-platform-junco-theme-colibri/pom.xml
@@ -26,37 +26,15 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.xwiki.platform</groupId>
-    <artifactId>xwiki-platform-junco</artifactId>
+    <artifactId>xwiki-platform-junco-themes</artifactId>
     <version>5.2-SNAPSHOT</version>
   </parent>
-  <artifactId>xwiki-platform-junco-base</artifactId>
-  <name>XWiki Platform - Junco - Base</name>
-  <packaging>pom</packaging>
-  <description>Junco Skin Base</description>
+  <artifactId>xwiki-platform-junco-theme-colibri</artifactId>
+  <name>XWiki Platform - Junco - Themes - Colibri</name>
+  <description>Junco - Colibri Theme</description>
+  <packaging>xar</packaging>
   <properties>
     <!-- Don't run CLIRR here since there's no Java code. -->
     <xwiki.clirr.skip>true</xwiki.clirr.skip>
   </properties>
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-assembly-plugin</artifactId>
-        <configuration>
-          <appendAssemblyId>false</appendAssemblyId>
-          <descriptors>
-            <descriptor>${basedir}/src/assemble/skin.xml</descriptor>
-          </descriptors>
-        </configuration>
-        <executions>
-          <execution>
-            <phase>package</phase>
-            <goals>
-              <goal>single</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-    </plugins>
-  </build>
 </project>
