XWIKI-1342: Building junco-theme-blueberry

--- a/xwiki-platform-core/xwiki-platform-junco/xwiki-platform-junco-themes/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-junco/xwiki-platform-junco-themes/pom.xml
@@ -35,5 +35,6 @@
   <description>Parent POM for Junco Themes modules</description>
   <modules>
     <module>xwiki-platform-junco-theme-colibri</module>
+    <module>xwiki-platform-junco-theme-blueberry</module>
   </modules>
 </project>
